# finavis

./: .editorconfig  .gitignore  LICENSE  README.md  pyproject.toml
finavis/: __init__.py  exception.py  exceptions.py
finavis/core/: __init__.py  quote.py  screener.py
finavis/utils/: __init__.py  functions.py  sessions.py
tests/: indexes.py  test_enums.py  test_functions.py  test_models.py  test_types.py
