[tool.poetry]
name = "finavis"
version = "0.0.6"
description = "Another unofficial API for some financial visualization website"
authors = ["serje ù <pleaseanswermeserjeu@icloud.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
requests = {extras = ["socks"], version = "~2.31"}
user-agent = "^0.1.10"
lxml = "~4"
attrs = "^23.2.0"
cssselect = "^1.2.0"

[tool.poetry.group.dev.dependencies]
black = "^23.12.0"
mypy = "^1.8.0"
isort = "^5.13.2"
types-lxml = "^2023.10.21"
types-requests = "^2.31.0.20231231"
python-dateutil = "^2.8.2"

[tool.isort]
multi_line_output = 3
include_trailing_comma = true
sections = ['FUTURE', 'STDLIB', 'THIRDPARTY', 'FIRSTPARTY', 'API', 'LOCALFOLDER']
force_grid_wrap = 0
use_parentheses = true
line_length = 88
skip_glob = "*/.serverless/*"
filter_files = true

[tool.black]
target-version = ['py312']
exclude = '''
(
  /(
      \.eggs
    | \.git
    | \.mypy_cache
    | \.pytest_cache
    | \.venv
    | \.serverless
    | build
  )/
)
'''

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
