[tool.poetry]
name = "finavis"
version = "0.0.37"
description = "another unofficial api for some financial visualization website"
authors = ["serje ù <pleaseanswermeserjeu@icloud.com>"]
license = "MIT"
readme = "README.md"
keywords = ["finance", "datascience", "scrapper", "markets", "stock", "quote", "ticker", "finviz"]
repository = "https://github.com/rdnve/finavis"
packages = [{include = "finavis"}]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Web Environment",
    "Intended Audience :: Developers",
    "Natural Language :: English",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries",
    "Topic :: Internet :: WWW/HTTP",
]

[tool.poetry.dependencies]
python = "~3.12"
requests = {extras = ["socks"], version = "~2.32"}
user-agent = "~0.1"
lxml = "~4"
attrs = "~23.2"
cssselect = "~1.2"

[tool.poetry.group.dev.dependencies]
black = "^25.12.0"
mypy = "^1.8.0"
isort = "^5.13.2"
types-lxml = "^2023.10.21"
types-requests = "^2.31.0.20231231"
python-dateutil = "^2.8.2"
pytest = "^7.4.4"
types-python-dateutil = "^2.9.0.20251115"

[tool.isort]
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
line_length = 88
skip_glob = "*/.serverless/*"
filter_files = true

[tool.black]
target-version = ['py312']
exclude = '''
(
  /(
      \.eggs
    | \.git
    | \.mypy_cache
    | \.pytest_cache
    | \.venv
    | \.serverless
    | build
  )/
)
'''

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
